# mine-sweeper-solver

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MineSweeper.cpp  MineSweeper.h  MineSweeper.py  README.md  READ_ME.txt  check_github_actions_locally.sh  codecov.yml  combination.h  compile.py  debug.py  player.py  probability.py  setup.py  solve.py  solver.cpp  try_cpp.py  validate_probability.py
.github/workflows/: python-app.yml
cpp/: debug.cpp  internal_debug.cpp  solver.cpp  solver_wrapper.cpp
py/: mine_sweeper.py  player.py  probability.py
src/: __init__.py  base_player.py  constants.py  mine_sweeper.py  player.py  player_cpp.py  probability.py  visualizer.py
test/: test_constants.py  test_mine_sweeper.py  test_player.py  test_probability.py  test_visualizer.py
